--- a/src/app.scss
+++ b/src/app.scss
@@ -16,4 +16,7 @@ page {
   --nutui-tabs-tab-line-color: var(--main-color);
   --nutui-tabs-line-bottom: 10%;
   --nutui-tabs-titles-item-min-width: 1px;
+
+  // NavBar
+  --nutui-navbar-background: var(--main-bgc);
 }
